<resources>
    <string name="app_name">Sun</string>
    <string name="decimalformat">千分位分隔显示//DecimalFormat("###,###")</string>
    <string name="group_by_test">groupBy实现集合的分组(得到的是一个map)</string>
    <string name="test_equals">比较两个实体类(重写equals和hashCode)</string>
    <string name="get_location">获取定位信息（系统api）</string>
    <string name="spannable_string">SpannableString使用</string>
    <string name="sub_zero_and_dot">使用java正则表达式去掉多余零，先去0再去.</string>
    <string name="format_w">数字格式化成...W</string>
</resources>